tests/syntax-error/syntax-error.arr
provide: leap eend

fun leap(year):
  true
end
